docs/1.0-dev/_sources/api/evennia.contrib.rst.txt
evennia.contrib 
=======================

.. automodule:: evennia.contrib
   :members:
   :undoc-members:
   :show-inheritance:



.. toctree::
   :maxdepth: 6

   evennia.contrib.barter
   evennia.contrib.building_menu
   evennia.contrib.chargen
   evennia.contrib.clothing
   evennia.contrib.color_markups
   evennia.contrib.custom_gametime
   evennia.contrib.dice
   evennia.contrib.email_login
   evennia.contrib.extended_room
   evennia.contrib.fieldfill
   evennia.contrib.gendersub
   evennia.contrib.health_bar
   evennia.contrib.mail
   evennia.contrib.mapbuilder
   evennia.contrib.menu_login
   evennia.contrib.multidescer
   evennia.contrib.puzzles
   evennia.contrib.random_string_generator
   evennia.contrib.rplanguage
   evennia.contrib.rpsystem
   evennia.contrib.simpledoor
   evennia.contrib.slow_exit
   evennia.contrib.talking_npc
   evennia.contrib.test_traits
   evennia.contrib.traits
   evennia.contrib.tree_select
   evennia.contrib.unixcommand
   evennia.contrib.wilderness


.. toctree::
   :maxdepth: 6

   evennia.contrib.awsstorage
   evennia.contrib.crafting
   evennia.contrib.evscaperoom
   evennia.contrib.ingame_python
   evennia.contrib.security
   evennia.contrib.turnbattle
   evennia.contrib.tutorial_examples
   evennia.contrib.tutorial_world
   evennia.contrib.xyzgrid
